# snakemake_unit_tests

./: .clang-format  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS  COPYING  Doxyfile  Makefile.am  README.md  config.example.yaml  configure.ac  environment-linux.yaml  environment-osx.yaml  environment.yaml  snakemake_unit_tests-0.1.0.pc.in  snakemake_unit_tests.doxyfile
.circleci/: config.yml
.github/workflows/: build_test_commands.sh  cicd.yml
doxygen/html/: annotated.html  cargs_8cc.html  cargs_8h.html  cargs_8h_source.html  classes.html  classsnakemake__unit__tests_1_1cargs.html  classsnakemake__unit__tests_1_1params.html  classsnakemake__unit__tests_1_1recipe.html  classsnakemake__unit__tests_1_1rule__block.html  classsnakemake__unit__tests_1_1snakemake__file.html  classsnakemake__unit__tests_1_1solved__rules.html  classsnakemake__unit__tests_1_1yaml__reader.html  dir_46d1d4bd523cdb0ceb47f2dc68cfecd5.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  index.html  main_8cc.html  menudata.js  rule__block_8cc.html  rule__block_8h.html  rule__block_8h_source.html  snakemake__file_8cc.html  snakemake__file_8h.html  snakemake__file_8h_source.html  solved__rules_8cc.html  solved__rules_8h.html  solved__rules_8h_source.html  utilities_8cc.html  utilities_8h.html  utilities_8h_source.html  yaml__reader_8cc.html  yaml__reader_8h.html  yaml__reader_8h_source.html
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  enums_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_3.js  (+24 more)
doxygen/latex/: annotated.tex  cargs_8cc.tex  cargs_8h.tex  classsnakemake__unit__tests_1_1cargs.tex  classsnakemake__unit__tests_1_1params.tex  classsnakemake__unit__tests_1_1recipe.tex  classsnakemake__unit__tests_1_1rule__block.tex  classsnakemake__unit__tests_1_1snakemake__file.tex  classsnakemake__unit__tests_1_1solved__rules.tex  classsnakemake__unit__tests_1_1yaml__reader.tex  files.tex  main_8cc.tex  refman.tex  rule__block_8cc.tex  rule__block_8h.tex  snakemake__file_8cc.tex  snakemake__file_8h.tex  solved__rules_8cc.tex  solved__rules_8h.tex  utilities_8cc.tex  utilities_8h.tex  yaml__reader_8cc.tex  yaml__reader_8h.tex
inst/: common.py  pytest_runner.bash  test.py  test_common.py  user_config_schema.yaml
readthedocs/source/: conf.py  index.rst
snakemake_unit_tests/: GlobalNamespaceTest.cc  GlobalNamespaceTest.h  cargs.cc  cargs.h  cargsTest.cc  cargsTest.h  main.cc  rule_block.cc  rule_block.h  rule_blockTest.cc  rule_blockTest.h  snakemake_file.cc  snakemake_file.h  snakemake_fileTest.cc  snakemake_fileTest.h  solved_rules.cc  solved_rules.h  solved_rulesTest.cc  solved_rulesTest.h  test_suite.cc  utilities.cc  utilities.h  yaml_reader.cc  yaml_reader.h  yaml_readerTest.cc  yaml_readerTest.h
tests/: compare_directories.bash  test0.test  test1.test  test10.test  test11.test  test12.test  test13.test  test14.test  test15.test  test16.test  test17.test  test18.test  test19.test  test2.test  test20.test  test21.test  test22.test  test23.test  test24.test  test25.test  test26.test  test27.test  test28.test  test29.test  test3.test  test30.test  test31.test  test32.test  test33.test  test34.test  test35.test  test36.test  test37.test  test38.test  test39.test  test4.test  test40.test  test5.test  test6.test  test7.test  (+8 more)
tests/examples/test1/input/workflow/: Snakefile
tests/examples/test10/expected/unit/: config.yaml
tests/examples/test10/input/workflow/: Snakefile
tests/examples/test11/expected/unit/: config.yaml
tests/examples/test11/input/: output3.txt
tests/examples/test11/input/workflow/: Snakefile
tests/examples/test12/expected/unit/: config.yaml
tests/examples/test12/input/workflow/: Snakefile
tests/examples/test13/expected/unit/: config.yaml
tests/examples/test13/input/: output2.txt
tests/examples/test13/input/workflow/: Snakefile
tests/examples/test14/expected/unit/: config.yaml
tests/examples/test14/input/: output2.txt
tests/examples/test14/input/workflow/: Snakefile
tests/examples/test15/expected/unit/: config.yaml
tests/examples/test15/input/workflow/: Snakefile
tests/examples/test16/expected/unit/: config.yaml
tests/examples/test16/input/workflow/: Snakefile
tests/examples/test26/input/: Snakedefs.smk  Snakefile  output.txt
tests/examples/test27/input/: input1.txt
tests/examples/test39/input/: config.yaml
tests/examples/test_interface/input/: config.defaults.yaml
tests/examples/test_nonstandard_snakefile_location/input/: Snakefile  config.yaml  input3.txt
tests/examples/test_update_snakefile/input/: input.txt  output.txt
(+138 files in other folders)
